nav-bar: Don't use gtk_style_context_set_background

https://bugzilla.gnome.org/show_bug.cgi?id=783120